2000-11-15  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceParser.pm (parse_postoffice): Handle older
	Post.Office bounces.

2000-11-14  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* t/bounce.t: Clear out @expect array between tests.

	* lib/Mj/BounceParser.pm (parse_postoffice): Restructure to fix
	several warnings.

	* lib/Mj/Deliver/Dest.pm (add): Accept null second argument.

2000-11-01  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Parser.pm (parse_part): Fix undef warning with "default
        password".  Use a better message in this case.

	* bin/mj_shell (parse_command): Use better message when
        "default password" is used to clear out a default password.

2000-10-28  Michael Yount <csf@moscow.com>

	* files/en/help/*:  Document previously undocumented modes.
	Add a paragraph about comments within here documents to the
	appropriate configuration setting files.  Describe configuration
	templates.  Demonstrate the use of here documents with the
	subscribe and unsubscribe commands.

	* lib/Majordomo.pm:   (common_subs)  New routine.  Find the
	addresses that are present in two or more subscriber lists.
	(config_get_vars)  Make non-secure settings of DEFAULT lists
	visible.
	(list_config_set)  Support "extract" mode, which removes a
	set of values from an array, or sets an existing value to
	its default if the existing value and extracted value are
	identical.
	(compare_arrays) New routine, from the perl FAQ.
	(lists) Show the private auxiliary lists (in aux mode) and
	private configuration templates (in config mode) if a
	list-specific master password is used.  Show the DEFAULT
	templates (in config mode) if a pattern matching DEFAULT
	is used.
	(rekey) Return to old behavior:  do not verify by default.
	(set) Add support for patterns using "pattern," "regex,"
	and "allmatching" modes.
	(who) Add support for "common" mode, which displays the 
	addresses held in common by two mailing lists.
